# RAG-GeoSpoiler

./: .gitignore  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_ROADMAP_V1_1.md  README.md  wiki_memory_implementation_plan.md
GeoSpoiler-RAG-Hybrid/: .env  .env.example  .env.v2_before_hybrid  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DATA_CONTRACTS.md  DEVELOPMENT_RETURN_LOG.md  EVAL.md  GOLDEN_SET.md  LLM_VERIFICATION_QUEUE.md  OPERATIONS.md  README.md  RELEASE_V1_1.md  RETRIEVAL_GUARDRAILS.md  SOURCE_SELECTION_GOLDEN.md  WIKI_MEMORY.md  auth.py  baseline_probe.py  cli.py  config.py  data_validation.py  debug_dialogs.py  experiment_registry.py  golden_compare.py  llm_auth.py  llm_verification_probe.py  main.py  models.py  pyproject.toml  requirements.txt  reranker.py  run_pipeline.cmd  run_pipeline.ps1  run_pipeline_and_test.cmd  run_tests.ps1  sitecustomize.py  source_selection_golden.py  test_api_prompt.py  test_baseline_probe.py  (+28 more)
GeoSpoiler-RAG-Hybrid/artifacts/: baseline_model_probe_metadata.json  baseline_model_probe_results.md  deepseek_v4_flash_clearcache_golden_set_results.md  deepseek_v4_flash_clearcache_golden_set_scores.json  deepseek_v4_flash_clearcache_smoke_results.md  deepseek_v4_flash_clearcache_smoke_scores.json  deepseek_v4_flash_clearcache_vs_e2_compare.md  deepseek_v4_flash_rebuilt_clearcache_golden_set_results.md  deepseek_v4_flash_rebuilt_clearcache_golden_set_scores.json  deepseek_v4_flash_rebuilt_clearcache_vs_e2_compare.md  deepseek_v4_flash_rebuilt_vs_pre_rebuild_compare.md  deepseek_v4_flash_reranker_clearcache_golden_set_results.md  (+59 more)
(+742 files in other folders)
